<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_favorites"
            android:enabled="true"
            android:icon="@drawable/custom_button"
            android:title="@string/add_cards" />
        <item
            android:id="@+id/action_schedules"
            android:icon="@drawable/custom_button"
            android:enabled="true"
            android:title="@string/start_new_game" />
        <item
            android:id="@+id/action_music"
            android:icon="@drawable/custom_button"
            android:enabled="true"
            android:title="@string/manage_cards" />
</menu>