<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/cardA"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_card"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/write_card_a" />

        <FrameLayout
            android:layout_width="30dp"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/cardB"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_card"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/write_card_b" />

    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:text="@string/save"
        android:background="@drawable/custom_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>